@@ -1,3 +1,11 @@
+2009-07-17  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-menu.c (totem_action_add_recent):
+	* src/totem-object.c (totem_action_set_mrl_with_warning),
+	(totem_action_open_files_list), (totem_action_remote):
+	Only call totem_action_add_recent() when playing the file,
+	not when adding it to the playlist
+
 2009-07-16  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
